--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,1 +1,15 @@
-Hello World
+Hello World1
+<!DOCTYPE html>
+
+<html>
+
+    <head>
+        <title>Hello World3 Title, My Site</title>
+    </head>
+
+    <body>
+        Hello World4 content body
+        <p>Hello World2</p>
+    </body>
+
+</html>
