--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,15 +1,43 @@
-Hello World1
 <!DOCTYPE html>
-
 <html>
 
+
     <head>
-        <title>Hello World3 Title, My Site</title>
+        <meta charset="utf-8">
+        <meta name="description" content="My website Description for Google Search">
+        <title>Site Title Will Show At Top</title>
     </head>
 
+
+
     <body>
-        Hello World4 content body
-        <p>Hello World2</p>
+
+        <h2><big>Hao's Site_Website Heading_Offical_Header_h2_h1ISBIGGEST</big></h2>
+        
+        <hr/>
+        <br/><br/><br/>
+
+        <p><big>This is the Starting <b>Paragraph</big></b></p>
+        <hr/><hr/>
+
+        <p>
+        <small>This is Another <b><i>Paragraph</i></b></small> 
+        </p>
+
+        <!--Don't display this
+        <p>
+            Water: H<sub>2</sub>o
+        </p>
+        -->
+
+
+        <p>Exponential Number: 10<sup>2</sup></p>
+
     </body>
+    <!-- this is the comment-->
+
+
 
 </html>
+
+
