--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
 
 
-    <body>
+    <body style = "background-color: lightblue;">
 
         <h2><big>Hao's Site_Website Heading_Offical_Header_h2_h1ISBIGGEST</big></h2>
         
@@ -33,9 +33,18 @@
 
         <p>Exponential Number: 10<sup>2</sup></p>
 
+
+        <hr/>
+        <br/><br/><br/>
+
+        <h3 style="color: green;">Style and Colors</h3>
+        <p style="color: red; background-color: blue;"> My page Colors is Blue</p>
+
+
     </body>
     <!-- this is the comment-->
 
+    
 
 
 </html>
