did well on the exam

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -83,7 +83,23 @@
 
     <!-- using links, used in nav or other links-->
     <body>
-        <a href="https://www.google.com"><h1> Google's Home Page</h1> </a>
+        <!--make sure to copy the https part-->
+        <!--the target attribute make another tab 
+            if you don't include it, it will open another window,
+            try delete this part: target="_blank"
+        -->
+        <a href="https://www.google.com" target="_blank">  
+            <h1><b>Google's Home Page</b></h1>  
+        </a>
+        
+
+        <!--link to my other pages-->
+        <a href="about.html">About Me Page</a>
+
+        <a href="dir1/gallery.html">Gallery Page</a>
+
+        <a href="mountain.jpg">Mountain Page</a>
+
 
     </body>
 
