some more basic

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,6 +29,23 @@
         <!-- local pic-->
         <img src="mountain.jpg" alt="mountain I love"/>
 
+        <!-- include video, the controls attribute enable the play button
+        if you don't want the user see the video, just delete the control part
+        poster is for thumb nail, again these attributes are optional
+        you can also pass autoplay and loop-->
+        <video src="guitar.mp4" poster="mountain.jpg" loop controls width="300"> 
+            A clip of me playing guitar
+        </video>
+
+        <!-- if you want to have youtube videos on your site, 
+        go to youtube and click on share and click on embed and copy the HTML code -->
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/oNsscmUwjMU?si=YIIPV3eptx_ltOaA" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; 
+        autoplay; clipboard-write; encrypted-media; gyroscope; 
+        picture-in-picture; web-share" allowfullscreen>
+        </iframe>
+
         
 
 
