--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,6 +41,48 @@
         <p style="color: red; background-color: blue;"> My page Colors is Blue</p>
 
 
+        <!--unorder lists-->
+        <ur>
+            <li>Basketball</li>
+            <li><a href="guitar.mp4">Guitar</a></li>
+        </ur>
+
+        <h4>Things I like but ordered! </h4>
+        <!--ordered lists-->
+        <ol>
+            <li>Apples</li>
+            <li>Guitar</li>
+            <li>Basketball</li>
+        </ol>
+
+
+        <h4>Things I like but I order them </h4>
+        <!--ordered lists,can do a, A, i, I-->
+        <ol type="A">
+            <li>Apples</li>
+            <li>Guitar</li>
+            <li>Basketball
+                <ol><!--ordered lists within a list-->
+                    <li>PG</li>
+                    <li>SG</li>
+                </ol>
+            </li>
+        </ol>
+
+
+        <hr/>
+        <!--description list, not use often but helpful-->
+        <dl>
+            <dt>Basketball</dt>
+            <dd>Describe the dt(stands for description term)</dd>
+            <dt>Guitar</dt>
+            <dd>what IS a Guitar? you describe it here</dd>
+        </dl>
+        
+
+
+
+
     </body>
 
 
