man what can I say

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -125,6 +125,54 @@
 
     <!-- using links, used in nav or other links-->
     <body>
+        <hr/>
+
+        <!-- html table tags-->
+        <table>
+            <thead><!-- this will be the info in the header of the table-->
+
+                <!--caption tag, like real title for the title-->
+                <caption><h2>List of Number</h2></caption>
+
+                <!--define table header, this will be bold-->
+                <tr>
+                    <th>Title one</th>
+                    <th>Title two</th>
+                    <th>Title three</th>
+                </tr> 
+
+            </thead>
+            <!--thead and tbody doesn't change the look
+            but it allow us to make clean and neat code-->
+            <!--start of the tbody-->
+            <tbody>
+                <tr>
+                    <!--this peace of table data will take up 2 cols space
+                    you can control how many col each take-->
+                    <td colspan="2">col one</td>
+                    <td>col two</td>
+                    <td>col three</td>
+                </tr> 
+
+
+                <!-- define another row-->
+
+                <tr>
+                    <td>col2 one</td>
+                    <td>col2 two</td>
+                    <td>col2 three</td>
+                </tr> 
+
+            </tbody>
+
+        </table>
+
+        <hr/>
+        <br>
+
+
+
+
         <!--make sure to copy the https part-->
         <!--the target attribute make another tab 
             if you don't include it, it will open another window,
@@ -141,6 +189,8 @@
         <a href="dir1/gallery.html">Gallery Page</a>
 
         <a href="mountain.jpg">Mountain Page</a>
+
+        <a href="blog.html">My BLOG</a>
 
 
     </body>
