block and inline

--- a/CSS/blog.html
+++ b/CSS/blog.html
@@ -19,10 +19,54 @@
         <br>
 
         
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul style="background-color: antiquewhite; padding:15px; margin:0px;">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact Me</li>
+            <li>Blog Site</li>
+        </ul>
+
+        <p>This text will wrap around the above block</p>
+
+        <br>
+
+        <ul style="float: left; background-color:aqua; padding:15px; margin:0px;">
+            <li>Home2</li>
+            <li>About2</li>
+            <li>Contact Me2</li>
+            <li>Blog Site2</li>
+        </ul>
+
+        <p>Float left looks like this: This text will wrap around the above block</p>
+        <br>
+        <br>
+
+        <ul style="float: right; background-color:brown; padding:15px; margin:0px;">
+            <li>Home2</li>
+            <li>About2</li>
+            <li>Contact Me2</li>
+            <li>Blog Site2</li>
+        </ul>
+
+        <p>Float right looks like this: This text will wrap around the above block
+            Float right looks like this: This text will wrap around the above block
+            Float right looks like this: This text will wrap around the above block
+            Float right looks like this: This text will wrap around the above block
+        </p>
+        <!--can be used to create hor lists-->
+        <span>item1</span>
+        <span>item2</span>
+
+        <br>
+        <hr/>
+        <br>
+
+        <!--hor list-->
+        <ul style="background-color:brown; padding:15px; margin:0px;">
+            <li style="display:inline;">Home2</li>
+            <li style="display:inline;">About2</li>
+            <li style="display:inline;">Contact Me2</li>
+            <li style="display:none;">Blog Site2</li>
         </ul>
 
 
