shadows opacity and border-radius

--- a/CSS/blog.html
+++ b/CSS/blog.html
@@ -16,8 +16,20 @@
             </main>
         </header>
 
-        <br>
+        <!--positon relatively, overlap-->
+        <div style="position: relative; bottom:20px;left:20px; width:90px;height:90px;background-color: blue;"></div>
+        <div style= "position: absolute; width:100px;height:100px;background-color: red;"></div>
 
+        <div style= "position: fixed; top: 0px; width:100px;height:100px;background-color: blue;"></div>
+        <!--static VS Relative VS Absolute VS Fixed-->
+        <!--by default, all HTML has static position, they listen what you say-->
+        <!--relative position: allow you take the element around, move it around relative to they where it supposed to be-->
+        <!--abs positon itself relative to the HTML document flow-->
+        <!--fixed positon itself relative to the view port-->
+
+
+
+        
         
         <ul style="background-color: antiquewhite; padding:15px; margin:0px;">
             <li>Home</li>
