--- a/CSS/index.html
+++ b/CSS/index.html
@@ -93,6 +93,9 @@
 
         <main style="padding: 10px; border:1px solid black; max-width:500px;">
             <p>This is 6th Paragraph!</p>
+            <br>
+            <hr/>
+            <a href="pics.html">Go Pics!</a>
         </main>
 
         
