--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,8 +11,10 @@
 
         <header>
             <a href="blog.html">Go Blog!</a>
+            <a href="something.html">Go something!</a>
             <!--override that body CSS style-->
             <h1 style="color: blue;">CSS Tut!</h1>
+            
             <hr>
             <br>
             <h1 style="color: cornflowerblue"> CSS TUT03_HTML_Color_name!!!</h1>
