--- a/CSS/pics.html
+++ b/CSS/pics.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <h1>CSS TUT</h1>
         <!--the last 2px and 5px is called blur!-->
         <h1 style="text-shadow:2px 2px 2px blue ;    color: black; position: relative; top: 125px; left:15px;">CSS</h1>
         <img style="box-shadow:5px 5px 5px ;  opacity:0.4" width=200 src="city.jpg" alt="city"/>
@@ -14,6 +15,47 @@
         <img style="border-radius:50% ;  opacity:0.4" width=200 src="city.jpg" alt="city"/>
         <br>
         <a href="index.html">Go back to Index</a>
+
+
+        <br>
+        <br>
+        <hr/>
+        <!--can also use 20em, 1em==default size,or 16 px-->
+        <!--1em, 2em....-->
+        <p style="color:blue; font-size: 20px;">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Voluptates error suscipit doloribus veritatis facilis amet modi sunt nobis et. 
+            Rem sapiente magni iure eligendi dicta in aliquam. Alias, accusamus quidem.
+        </p>
+        <br>
+        <br>
+        <hr/>
+        <!--there is also backup like Times instead of Times New Roman-->
+        <!--can also be Times New Roman...but all that will be in single quotation-->
+        <p style="font-family: 'Courier'; font-size: 2em;">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Voluptates error suscipit doloribus veritatis facilis amet modi sunt nobis et. 
+            Rem sapiente magni iure eligendi dicta in aliquam. Alias, accusamus quidem.
+        </p>
+        <br>
+        <br>
+        <hr/>
+        <!--because some site may not support your font, so you have a list of backup follow the main font like below-->
+        <p style="font-family: 'Courier New', Courier, monospace;">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Voluptates error suscipit doloribus veritatis facilis amet modi sunt nobis et. 
+            Rem sapiente magni iure eligendi dicta in aliquam. Alias, accusamus quidem.
+        </p>
+
+        <br>
+        <br>
+        <hr/>
+        <p style="font-style: italic; font-variant: small-caps; font-weight: bold;">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Voluptates error suscipit doloribus veritatis facilis amet modi sunt nobis et. 
+            Rem sapiente magni iure eligendi dicta in aliquam. Alias, accusamus quidem.
+        </p>
+
     </body>
 
 
