--- a/CSS/external.html
+++ b/CSS/external.html
@@ -20,6 +20,7 @@
 <h1>HTML tag STYLE to remove inline styling</h1>
 <main>
     <h1>Thirds header</h1>
+    <a href="something.html">Go something!</a>
     <p>nsequatur dolores! Ab, nemo error.</p>
 </main>
 
