--- a/CSS/something.html
+++ b/CSS/something.html
@@ -20,6 +20,7 @@
 <h1>HTML tag STYLE to remove inline styling</h1>
 <main>
     <h1>Thirds header</h1>
+    <a href="external.html">Go external!</a>
     <p>nsequatur dolores! Ab, nemo error.</p>
 </main>
 
