--- a/CSS/external.html
+++ b/CSS/external.html
@@ -4,27 +4,24 @@
         <meta charset="utf-8">
         <title> CSS Site Title Will Show At Top</title>
         <meta name="description" content="My website Description for Google Search, this file is for CSS Basic">
-        <style>
-            body{
-                color: blue;
-                background-color: red;
-            }
-            h1{
-                color: black;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css" />
     </head> 
 
 <body>
 
-<h1>HTML tag STYLE to remove inline styling</h1>
+<h1>External CSS!</h1>
 <main>
     <h1>Thirds header</h1>
     <a href="index.html">Go index!</a>
-    <p>nsequatur dolores! Ab, nemo error.</p>
+    <p>nsequatur dolores! Ab, nemo error.
+    Three ways to do CSS,
+    1. inline with HTML tag
+    2. style tag within head tag
+    3. external CSS file
+    </p>
 </main>
 
-<h1>ANother Header</h1>
+<h1>Another Header</h1>
 
 
 </body>
