all link together

--- a/JS/index.html
+++ b/JS/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>JavaScript Tutorial</title>
+        <a href="index2.html">Go to Index2.html</a>
+        <br>
+        <a href="page.html">Go to PAGE HTML</a>
+        <br>
 
         <!--this script tag is only needed when you have external
         JS file, if your JS code is embed within your HTML, then you 
@@ -13,7 +17,7 @@
     <br>
 
     <body>
-
+        <a href="index2.html">Go to Index2.html</a>
         
         <!-- <script type="text/JavaScript">
             // Never too late
