--- a/JS/page.html
+++ b/JS/page.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Site Title: JavaScript Practice</title>
+        <a id="link" href="index.html">Go to Index</a>
         <script src="script1.js"></script>
         <hr>
         <!--if move this down, then the js content will move down, 
@@ -12,6 +13,7 @@
     <br>
 
     <body>
+        
         <h1>This is the content of HTML</h1>
         <!--you can also have the script src here-->
         <!--<script src="script1.js"></script>-->
