--- a/JS/index2.html
+++ b/JS/index2.html
@@ -5,9 +5,9 @@
     </head>
     
     <body>
-        <h1 id=""header">JavaScript</h1>
+        <h1 id="header">JavaScript</h1>
         <a id="link" href="index.html">Go to Index</a>
     
-        <script src="scrip2.js"></script>
+        <script src="script2.js"></script>
     </body>
 </html>
