classes and ids

--- a/CSS/external.html
+++ b/CSS/external.html
@@ -9,8 +9,8 @@
 
 <body>
 
-<h1>External CSS!</h1>
-<main>
+<h1 id = "external-h1">External CSS! AND IDs and Classes!</h1>
+<main class = "fancy-border blue-text">
     <h1>Thirds header</h1>
     <a href="index.html">Go index!</a>
     <p>nsequatur dolores! Ab, nemo error.
@@ -19,9 +19,14 @@
     2. style tag within head tag
     3. external CSS file
     </p>
+
+    <p>Classes are more powerful than ID, bc you can use it multiple times</p>
+    <P>Can only have one id on HTML element</P>
+    <P>but can have as many class as you want</P>
+    <P>class and ids kind of the same job</P>
 </main>
 
-<h1>Another Header</h1>
+<h1 id = "external-h1">Another Header using same id so same color</h1>
 
 
 </body>
