--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,6 +11,7 @@
 
         <header>
             <a href="blog.html">Go Blog!</a>
+            <a href="index2.html">Go index2 page!</a>
             <a href="something.html">Go something!</a>
             <!--override that body CSS style-->
             <h1 style="color: blue;">CSS Tut!</h1>
