--- a/CSS/index.html
+++ b/CSS/index.html
@@ -13,6 +13,7 @@
             <a href="blog.html">Go Blog!</a>
             <a href="index2.html">Go index2 page!</a>
             <a href="something.html">Go something!</a>
+            <a href="index3.html">Go index3 page learn flexbox!</a>
             <!--override that body CSS style-->
             <h1 style="color: blue;">CSS Tut!</h1>
             
