--- a/JS/index2.html
+++ b/JS/index2.html
@@ -13,7 +13,9 @@
         <br>
         <button id="button" onclick="alert('you clicked me')">Click Me</button>
         <button id="button2" onclick="handleClick(this)">Click Me Second Time</button>
-
+        <!--when you use the it as attribute
+        you need to include this "on" like onclick
+        when you are in HTML as addeventlistener, you don't need this "on"-->
 
         <h1 id="header">JavaScript</h1>
         <a id="link" href="index.html">Go to Index</a>
