message page build

--- a/JS/index.html
+++ b/JS/index.html
@@ -7,6 +7,7 @@
         <br>
         <a href="page.html">Go to PAGE HTML</a>
         <br>
+        <a href="message.html">Go to Message Page</a>
 
         <!--this script tag is only needed when you have external
         JS file, if your JS code is embed within your HTML, then you 
