add animation link

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -10,6 +10,7 @@
     <body style="color: green; font-size:20px">
 
         <header>
+            <a href="animation.html">Go animation page!</a>
             <a href="blog.html">Go Blog!</a>
             <a href="index2.html">Go index2 page!</a>
             <a href="something.html">Go something!</a>
