using import doesn't speed up things

--- a/CSS/indeximport.html
+++ b/CSS/indeximport.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Site Title</title>
+        <link rel="stylesheet" href="style4import.css" />
     </head>
     <body>
         <h1>CSS import</h1>
