--- a/JS/timingfunc.html
+++ b/JS/timingfunc.html
@@ -10,7 +10,7 @@
 
 
         <button onClick="setInterval(sayHi, 2000)">Click Me2</button>
-        <script src="timingwebstorage.js"></script>
+        <script src="timingfunc.js"></script>
     
     </body>
 </html>
