building react without npm

--- a/React/index.html
+++ b/React/index.html
@@ -3,6 +3,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Learn React Site</title>
+
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <!-- this gonna load bibel, this is from babel website-->
+
         <!--this is the easy way of including react
         you just add script tag-->
         <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
@@ -28,6 +32,9 @@
         that is all you need for react
         there is nothing in the div, but if you inspect
         you will see it actually have content but it won't show up-->
-        <script src="index.js"></script>
+        
+        
+        <!-- and you need to add the type-->
+        <script type ="text/babel" src="index.js"></script>
     </body>
 </html>
